force-app/main/default/src/objects/Lead/fields/Length_of_Interaction_MVN__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Interaction_MVN__c</fullName>
    <description>Approximate length of time spent interacting with this person.</description>
    <label>Length of Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 5 minutes</fullName>
            </value>
            <value>
                <fullName>5-10 minutes</fullName>
            </value>
            <value>
                <fullName>10-15 minutes</fullName>
            </value>
            <value>
                <fullName>More than 15 minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>