force-app/main/default/src/objects/Lead/fields/Pending_Lead_MVN__c.field-meta.xml
<CustomField>
    <fullName>Pending_Lead_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Pending Consumer object.</description>
    <inlineHelpText>Lookup to Pending Consumer object.</inlineHelpText>
    <label>Pending Consumer</label>
    <referenceTo>Pending_Lead_MVN__c</referenceTo>
    <relationshipLabel>Consumers</relationshipLabel>
    <relationshipName>Consumers</relationshipName>
    <type>Lookup</type>
</CustomField>