force-app/main/default/src/objects/Lead/fields/Phone_Type_MVN__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type_MVN__c</fullName>
    <description>Determines the PJN_Contact_Information__c.PJN_Type__c that will be populated on conversion for the Phone value.  If this field is left blank, it does not drive any logic.</description>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>