force-app/main/default/src/objects/Lead/fields/Prescribed_MVN__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_MVN__c</fullName>
    <label>Prescribed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>