force-app/main/default/src/objects/Lead/fields/Qualification_Status_MVN__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Status_MVN__c</fullName>
    <description>Determines the qualified/unqualified status of the care plan created on conversion.</description>
    <formula>CASE( RecordType.DeveloperName ,

/* Libtayo Marketing */
&quot;Libtayo_Marketing_Consumer_MVN&quot; ,
    IF( ISPICKVAL( Prescribed_MVN__c, &quot;Yes&quot; ), &quot;Qualified&quot;, &quot;Unqualified&quot; ),

/* Default */
&quot;&quot;
)</formula>
    <label>Qualification Status</label>
    <type>Text</type>
</CustomField>