force-app/main/default/src/objects/Lead/fields/Screening_Results_MVN__c.field-meta.xml
<CustomField>
    <fullName>Screening_Results_MVN__c</fullName>
    <description>The results of the screening, if completed.</description>
    <label>Screening Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signs of DR</fullName>
            </value>
            <value>
                <fullName>No Signs of DR</fullName>
            </value>
            <value>
                <fullName>Not Yet Screened</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>