force-app/main/default/src/objects/Lead/fields/Specialists_Shared_MVN__c.field-meta.xml
<CustomField>
    <fullName>Specialists_Shared_MVN__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Indicates whether the patient was sent results from a specialist search as part of the interaction.</description>
    <label>Specialists Shared</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_MVN</valueSetName>
    </valueSet>
</CustomField>