force-app/main/default/src/objects/Lead/fields/Topic_1_Discussed_MVN__c.field-meta.xml
<CustomField>
    <fullName>Topic_1_Discussed_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate whether Topic 1 was discussed during the interaction.</description>
    <label>Topic 1 Discussed</label>
    <type>Checkbox</type>
</CustomField>