force-app/main/default/src/objects/Lead/fields/Topic_3_Discussed_MVN__c.field-meta.xml
<CustomField>
    <fullName>Topic_3_Discussed_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate whether Topic 3 was discussed during the interaction.</description>
    <label>Topic 3 Discussed</label>
    <type>Checkbox</type>
</CustomField>