force-app/main/default/src/objects/Lead/fields/Topics_Discussed_MVN__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discussed_MVN__c</fullName>
    <description>Topics discussed with the participant during an interaction.</description>
    <label>Topics Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Diabetic Macular Edema</fullName>
            </value>
            <value>
                <fullName>Diabetic Retinopathy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>