force-app/main/default/src/objects/Lead/fields/Treatment_Start_Date_Known_MVN__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Start_Date_Known_MVN__c</fullName>
    <description>Is the start date of the enrollee&apos;s treatment known?</description>
    <label>Treatment Start Date Known?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>