force-app/main/default/src/objects/Lead/recordTypes/DEDSI_Consumer_MVN.recordType-meta.xml
<RecordType>
    <fullName>DEDSI_Consumer_MVN</fullName>
    <active>true</active>
    <businessProcess>HealthCloudGA__LeadToPatientProcess</businessProcess>
    <label>DEDSI Consumer</label>
</RecordType>