force-app/main/default/src/objects/Lead/recordTypes/Libtayo_Marketing_Consumer_MVN.recordType-meta.xml
<RecordType>
    <fullName>Libtayo_Marketing_Consumer_MVN</fullName>
    <active>true</active>
    <businessProcess>Libtayo Marketing</businessProcess>
    <label>Libtayo Marketing Consumer</label>
</RecordType>