force-app/main/default/src/objects/Lead/validationRules/Libtayo_Marketing_Must_Be_Over_18_MVN.validationRule-meta.xml
<ValidationRule>
    <fullName>Libtayo_Marketing_Must_Be_Over_18_MVN</fullName>
    <active>true</active>
    <description>Validates that Libtayo Marketing enrollments are over 18.</description>
    <errorConditionFormula>DATE( YEAR( TODAY() ) - 18, MONTH( TODAY() ), DAY( TODAY() )) &lt;  HealthCloudGA__BirthDate__c</errorConditionFormula>
    <errorDisplayField>HealthCloudGA__BirthDate__c</errorDisplayField>
    <errorMessage>Enrollee must be over 18 years of age.</errorMessage>
</ValidationRule>