force-app/main/default/src/objects/Lead/validationRules/Other_Topics_Discussed_MVN.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Topics_Discussed_MVN</fullName>
    <active>true</active>
    <description>Ensures that Other Topics Discussed is populated if Other is selected in the Topics Discussed multi-select picklist.</description>
    <errorConditionFormula>INCLUDES( Topics_Discussed_MVN__c, &quot;Other&quot;) &amp;&amp;  ISBLANK(Other_Topics_Discussed_MVN__c)</errorConditionFormula>
    <errorDisplayField>Other_Topics_Discussed_MVN__c</errorDisplayField>
    <errorMessage>Please indicate what other topics were discussed.</errorMessage>
</ValidationRule>