force-app/main/default/src/objects/Lead/validationRules/Other_Topics_Prevention_MVN.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Topics_Prevention_MVN</fullName>
    <active>true</active>
    <description>Prevents Other Topics Discussed being populated if Other is not selected in the Topics Discussed multi-select picklist.</description>
    <errorConditionFormula>NOT(INCLUDES(Topics_Discussed_MVN__c, &quot;Other&quot;)) &amp;&amp;  NOT(ISBLANK(Other_Topics_Discussed_MVN__c))</errorConditionFormula>
    <errorDisplayField>Topics_Discussed_MVN__c</errorDisplayField>
    <errorMessage>Please select &apos;Other&apos; if listing other discussion topics.</errorMessage>
</ValidationRule>