force-app/main/default/src/objects/Lead/validationRules/Require_Contact_Information_MVN.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contact_Information_MVN</fullName>
    <active>true</active>
    <description>Requires at least one of Phone, Email, or Address if the participant is consenting.</description>
    <errorConditionFormula>ISBLANK( Phone ) &amp;&amp;
ISBLANK( Email ) &amp;&amp;
ISBLANK( PostalCode ) &amp;&amp;
NOT(ISPICKVAL( Status , &quot;Declined Consent&quot;))</errorConditionFormula>
    <errorMessage>Please include at least one of Phone, Email, or Zip.</errorMessage>
</ValidationRule>