force-app/main/default/src/objects/Lead/listViews/All_Consumers_MVN.listView-meta.xml
<ListView>
    <fullName>All_Consumers_MVN</fullName>
    <columns>FULL_NAME</columns>
    <columns>HealthCloudGA__BirthDate__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Event_MVN__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Consumers</label>
    <language>en_US</language>
</ListView>